# PizzaGPT

./: .gitignore  2.txt  README.md  clean.py  crawl.py  main.py  packets.py  prompt.txt  pyproject.toml  reasoner.py  requirements.txt  ws.py
examples/: 1.txt  2.txt  3.txt
twillio/: main.py  start.py  transcribe.py
