[tool.poetry]
name = "ai-agent"
version = "0.1.0"
description = ""
authors = ["Freeman Jiang <freeman.jiang.ca@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
playwright = "^1.39.0"
openai = "^0.28.1"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
